# helicopter

./: .gitignore
heli-firmware/: Cargo.toml
heli_firmware/: Cargo.toml
heli_firmware/src/: main.rs
pcb/heli/: #auto_saved_files#  bom.ini  bom_bom_.csv  bom_bom_.html  fp-info-cache  fp-lib-table  gps.kicad_sch  gps.kicad_sch-bak  heli.kicad_pcb  heli.kicad_prl  heli.kicad_pro  heli.kicad_sch  heli.kicad_sch-bak  heli.xml  heli_bom_.csv  heli_bom_.csv.tmp  imu.kicad_sch  lib.kicad_sym  magnetic_sensor.kicad_sch  motor.kicad_sch  radio.kicad_sch
pcb/heli/lib.pretty/: LINX_CONMHF4-SMD-G-T.kicad_mod  XCVR_NEO-6M-GPS.kicad_mod  XCVR_NEO-M9N-00B.kicad_mod  XDCR_BMI270.kicad_mod  XDCR_BMM150.kicad_mod
pcb/heli/sparkfun.pretty/: TRACE_ANTENNA_2.4GHZ_15.2MM.kicad_mod
pcb/remote/: remote.kicad_prl  remote.kicad_pro  remote.kicad_sch
protocol/: Cargo.toml
protocol/src/: lib.rs
remote_firmware/: Cargo.toml  openocd.gdb
remote_firmware/.cargo/: config.toml
remote_firmware/src/: main.rs
