[package]
authors = ["Paul <paul.robl@pr-d.de>"]
edition = "2021"
readme = "README.md"
name = "heli-try"
version = "0.1.0"

[dependencies]
nb = "1.0.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
mpu6050-dmp = "0.2.0"
embedded-nrf24l01 = "0.2.0"

[[bin]]
name = "heli-try"
test = false
bench = false

[profile.dev]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3


[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
